fix contrast issue with darker green color

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -146,7 +146,7 @@ main{
 .hero-button{
     text-decoration: none;
     padding: 10px 20px;
-    background-color:#8FAF69;
+    background-color:#355e03;
     text-transform: uppercase;
     color: #fff;
     border-radius: 5px;
@@ -168,7 +168,7 @@ main{
    } 
 
    #introduction h2 {
-    color: #8FAF69;
+    color: #355e03;
     margin-bottom: 15px;
    }
    .intro-text p{
@@ -210,7 +210,7 @@ main{
    .service-button {
     text-decoration: none;
     padding: 10px 20px;
-    background-color:#8FAF69;
+    background-color:#355e03;
     text-transform: uppercase;
     color: #fff;
     border-radius: 5px;
@@ -234,12 +234,12 @@ main{
    }
 
    #testimonials h2 {
-    color: #8FAF69;
+    color: #355e03;
     margin-bottom: 15px;
    }
 
    .testimonial{
-    border: 1px solid #8FAF69;
+    border: 1px solid #355e03;
     padding: 15px;
     margin-bottom: 20px;
     border-radius: 5px;
@@ -260,7 +260,7 @@ main{
    }
    .testimonial h3 {
     margin-top: 10px;
-    color: #8FAF69;
+    color: #355e03;
     font-weight: normal;
    }
 
@@ -272,7 +272,7 @@ main{
     text-align: center;
    }
    #newsletter h2{
-    color: #8FAF69;
+    color: #355e03;
     margin-bottom: 15px;
    }
    #newsletter p{
@@ -289,24 +289,24 @@ main{
    #newsletter input[type="email"]{
     width: 80%;
     padding: 10px;
-    border: 1px solid #8FAF69;
+    border: 1px solid #355e03;
     border-radius: 5px;
    }
 
    #newsletter button {
     text-decoration: none;
     padding: 10px 20px;
-    background-color:#8FAF69;
+    background-color:#355e03;
     text-transform: uppercase;
     color: #fff;
-    border: 2px solid #8FAF69;
+    border: 2px solid #355e03;
     border-radius: 5px;
     display: inline-block;
     cursor: pointer;
    }
 
    #success-message {
-    color: #8FAF69;
+    color: #355e03;
     margin-top: 20px;
    }
 
@@ -324,7 +324,7 @@ main{
    }
 
    #video-section h2{
-    color: #8FAF69;
+    color: #355e03;
     margin-bottom: 15px;
    }
 
@@ -363,7 +363,7 @@ main{
    
    .download-service-btn{
     padding: 10px 20px;
-    background-color: #8FAF69;
+    background-color: #355e03;
     color: #fff;
     border-radius: 5px;
     cursor: pointer;
@@ -422,13 +422,13 @@ main{
    .contact-form{
     margin: 10px;
     padding: 20px;
-    border: 1px solid #8FAF69;
+    border: 1px solid #355e03;
     background-color: #f9f9f9;
     border-radius: 5px;
    }
 
    .contact-form h2{
-    color: #8FAF69;
+    color: #355e03;
    }
 
    .contact-form form{
@@ -443,16 +443,16 @@ main{
    .contact-form input, .contact-form textarea {
     padding: 8px;
     margin-top: 5px;
-    border: 1px solid #8FAF69;
+    border: 1px solid #355e03;
    }
 
    .contact-form button {
     text-decoration: none;
     padding: 10px 20px;
-    background-color:#8FAF69;
+    background-color:#355e03;
     text-transform: uppercase;
     color: #fff;
-    border: 2px solid #8FAF69;
+    border: 2px solid #355e03;
     border-radius: 5px;
     display: inline-block;
     cursor: pointer;
@@ -466,7 +466,7 @@ main{
     background-color: #fff;
    }
    #contact-info h2 {
-    color: #8FAF69;
+    color: #355e03;
     margin-bottom: 15px;
    }
    #contact-info p{
@@ -486,7 +486,7 @@ main{
     margin: 5px 0;
    }
    .contact-detail p{
-    color: #8FAF69;
+    color: #355e03;
    }
 /*footer*/
 
@@ -711,18 +711,18 @@ main{
 @media screen and (min-width: 992px) {
     /*navbar*/
     #nav-bar a:hover{
-        border-bottom: 1px solid #8FAF69;
-        color:#8FAF69;
+        border-bottom: 1px solid #355e03;
+        color:#355e03;
     }
 
     /*Hero Section*/
 
     .hero-button:hover{
         background-color: #fff;
-        color: #8FAF69;
+        color: #355e03;
         transform: scale(1.05);
         box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-        border: 2px solid #8FAF69;
+        border: 2px solid #355e03;
     }
 
     #introduction{
@@ -741,17 +741,17 @@ main{
 
     .service-button:hover{
         background-color: #fff;
-        color: #8FAF69;
+        color: #355e03;
         transform: scale(1.05);
         box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-        border: 2px solid #8FAF69;
+        border: 2px solid #355e03;
     }
 
     /*newsletter section*/
     #newsletter button:hover {
         background-color: #fff;
-        color: #8FAF69;
-        border: 2px solid #8FAF69;
+        color: #355e03;
+        border: 2px solid #355e03;
     }
     /*Image Text Block Section*/
     .image-text-block{
@@ -768,10 +768,10 @@ main{
 
      .download-service-btn:hover {
         background-color: #fff;
-        color: #8FAF69;
+        color: #355e03;
         transform: scale(1.05);
         box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-        border: 2px solid #8FAF69;
+        border: 2px solid #355e03;
      }
 
      /*Image Text Block Section 2*/
@@ -787,8 +787,8 @@ main{
     /*Contact Form*/
     .contact-form button:hover{
         background-color: #fff;
-        color: #8FAF69;
-        border: 2px solid #8FAF69;
+        color: #355e03;
+        border: 2px solid #355e03;
     }
 
 }
